Eliminate actionable build warnings